# tapefive

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: faq.md  index.md  install.md  shema.md
docs/api/: index.md
docs/examples/: index.md
docs/guide/: parse.md  quickstart.md  tape5.md
notebooks/: lblrtm_getting_started.ipynb  oxygen_A_band.ipynb  precipitable_water.ipynb  read_TAPE27.ipynb
tapefive/: __init__.py  fileio.py  lab.py  lnfl.py  tape5parser.py  tools.py
