[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tapefive"
version = "0.0.1"
description = "High-level Python API for LBLRTM/LNFL: build TAPE5, run models, parse outputs."
authors = [{ name = "Hagen Telg", email = "hagen.telg@noaa.gov" }]
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-jupyter",
  "pymdown-extensions",
]

[tool.hatch.build.targets.wheel]
packages = ["tapefive"]
